# pkg/controllers/FileUploadController.go
@@ -22,7 +22,7 @@ import (
 // @Success 200 {string} string "CSV file uploaded and saved to the database successfully!"
 // @Failure 400 {object} models.ErrorResponse
 // @Failure 500 {object} models.ErrorResponse
-// @Router /upload/{id} [post]
+// @Router /api/upload/{id} [post]
 func UploadHandler(w http.ResponseWriter, r *http.Request) {
 	
 	// Parse the multipart form in the request
